Padroniza os endpoints de solicitação para api/v1/solicitacoes
Para ficar um pouco mais compatível com a sugestão.
